--- a/src/scss/pages/_sign-in.scss
+++ b/src/scss/pages/_sign-in.scss
@@ -1,32 +1,37 @@
 // _sign-in.scss
-// 
+//
 // Template's sign in page styles.
-// 
-
+//
 
 // Sign In Page
-.sign-in {
+.sign-in___container {
+  background: #363740;
+  .sign-in {
+    background: white;
     padding: 0px 20px;
-	.col-img img {
-		width: 100%;
-		max-width: 500px;
-		margin: auto;
-		display: block;
+	max-width: 500px;
+	max-height: 500px;
+    .col-img img {
+      width: 100%;
+      max-width: 500px;
+      margin: auto;
+      display: block;
 
-		@media( min-width: $lg) {
-			margin: 0;
-		}
-	}
-	.col-form .ant-switch {
-		margin-right: 5px;
-	}
-	.ant-form-item-label {
-		line-height: 28px;
-	}
-	.ant-form-item label {
-		font-size: 13px;
-		font-weight: $fw-semibold;
-		color: $color-gray-12;
-	}
+      @media (min-width: $lg) {
+        margin: 0;
+      }
+    }
+    .col-form .ant-switch {
+      margin-right: 5px;
+    }
+    .ant-form-item-label {
+      line-height: 28px;
+    }
+    .ant-form-item label {
+      font-size: 13px;
+      font-weight: $fw-semibold;
+      color: $color-gray-12;
+    }
+  }
 }
 // / Sign In Page
