--- a/src/scss/base/_override.scss
+++ b/src/scss/base/_override.scss
@@ -1212,7 +1212,28 @@ textarea.ant-time-picker-input {
     padding-bottom: 6px;
   }
 }
-
+p.ant-upload-drag-icon {
+  margin: 10px;
+}
 .ant-menu:not(.ant-menu-horizontal) .ant-menu-item-selected {
   background-color: transparent;
+}
+.ant-upload.ant-upload-select-picture-card,
+.image-preview {
+  width: 344px;
+  max-width: 90%;
+  height: 226px;
+  margin: 5px;
+  @media (max-width: $md) {
+    width: 100% !important;
+    max-width: 100%;
+    height: 200px;
+    margin: 0px;
+  }
+}
+p.ant-upload-hint {
+  max-width: 344px;
+  @media (max-width: $md) {
+    width: 100% !important;
+  }
 }
